# blackmesaclassic-new

./: .gitmodules  CMakeLists.txt  Config.h.in  GetGitRevisionDescription.cmake  LICENSE.txt  MakeLicense.cmake  fmt-static-msvc.diff
cl_dll/: CMakeLists.txt  GameStudioModelRenderer_Sample.cpp  MOTD.cpp  ammo.cpp  ammo_secondary.cpp  ammohistory.cpp  battery.cpp  cl_util.h  death.cpp  ev_hldm.h  health.cpp  hud.cpp  hud_bench.cpp  hud_benchtrace.cpp  hud_redraw.cpp  hud_servers.cpp  input.cpp  menu.cpp  saytext.cpp  scoreboard.cpp  statusbar.cpp  vgui_ScorePanel.h  vgui_ServerBrowser.cpp  view.cpp  voice_status.cpp
cl_dll/hl/: hl_weapons.cpp
common/: const.h
dlls/: CMakeLists.txt  cbase.cpp  client.cpp  effects.cpp  hassassin.cpp  model.cpp  model.h  mp5.cpp  nihilanth.cpp  nodes.cpp  player.cpp  python.cpp  talkmonster.cpp  util.h  weapons.cpp  weapons.h  world.cpp
game_shared/bot/: nav_area.cpp
